fixed a bug that height in navMenu when openned wasn't covering 100% of the page. Now it's well suited

--- a/src/app/[locale]/components/Navbar/navbar.module.css
+++ b/src/app/[locale]/components/Navbar/navbar.module.css
@@ -331,6 +331,7 @@
 
     .navMenu.open {
       padding-top: 20%;
+      height: 100%;
     }
 
     .navMenu ul {
